[gd_scene load_steps=2 format=3 uid="uid://du3lef2lvdd8v"]

[ext_resource type="Script" uid="uid://drch71y4e83gm" path="res://scripts/dialogues/dialogueUI.gd" id="1_nb7lm"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_nb7lm")

[node name="DialoguePanel" type="PanelContainer" parent="."]
offset_left = 153.0
offset_top = 78.0
offset_right = 1090.0
offset_bottom = 627.0

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="DialoguePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "NOME"

[node name="Portrait" type="TextureRect" parent="DialoguePanel/MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="TextLabel" type="Label" parent="DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Texto da fala "

[node name="NextButton" type="Button" parent="DialoguePanel/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "bot√£o"

[connection signal="pressed" from="DialoguePanel/MarginContainer/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
